--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     ],
     "paths": {
       "@/*": [
-        "src/*"
+        "examples/*"
       ]
     },
     "lib": [
@@ -26,9 +26,9 @@
     ]
   },
   "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue",
+    "examples/**/*.ts",
+    "examples/**/*.tsx",
+    "examples/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
