--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "vuen",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lib": "vue-cli-service build --target lib --name common --dest lib packages/index.js",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "postcss-px2rem": "^0.3.0",
-    "px2rem-loader": "^0.1.9",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.4.0",
-    "@vue/cli-plugin-router": "~4.4.0",
-    "@vue/cli-plugin-typescript": "~4.4.0",
-    "@vue/cli-plugin-vuex": "~4.4.0",
-    "@vue/cli-service": "~4.4.0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.5.2"
-  }
+    "name": "vuen",
+    "version": "0.1.1",
+    "private": false,
+    "publishConfig": {
+        "registry": "http://localhost:8081/repository/npm-hosted/"
+    },
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "lib": "vue-cli-service build --target lib --name common --dest lib packages/index.js",
+        "docs:dev": "vuepress dev docs",
+        "docs:build": "vuepress build docs"
+    },
+    "dependencies": {
+        "core-js": "^3.6.5",
+        "postcss-px2rem": "^0.3.0",
+        "px2rem-loader": "^0.1.9",
+        "vue": "^2.6.11",
+        "vue-router": "^3.2.0",
+        "vuex": "^3.4.0"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.4.0",
+        "@vue/cli-plugin-router": "~4.4.0",
+        "@vue/cli-plugin-typescript": "~4.4.0",
+        "@vue/cli-plugin-vuex": "~4.4.0",
+        "@vue/cli-service": "~4.4.0",
+        "less": "^3.0.4",
+        "less-loader": "^5.0.0",
+        "typescript": "~3.9.3",
+        "vue-template-compiler": "^2.6.11",
+        "vuepress": "^1.5.2"
+    }
 }
